Reorganise la structure des modules backend et nettoie le suivi git
Aplatit l'arborescence des modules (config-serveur, eureka-server,
gateway-proxy, microservice-produits, microservice-administration) qui
etait imbriquee en double (ex: config-serveur/config-serveur/*), ajoute
le module cloud-config-gescom et un CLAUDE.md documentant l'architecture.

Ajoute un .gitignore racine pour exclure les fichiers qui ne doivent
pas etre versionnes : logs et crash-dumps (hs_err_pid*.log,
replay_pid*.log, myapp.log.*), le dump de base backup-librairie.sql
(60 Mo), et les fichiers d'environnement (.env, easycomp-pro).

Le frontend Angular (web/easycompro-gescom/.../adminlte-angular-app)
est un depot git distinct avec son propre remote et n'est pas inclus
dans ce commit.